[gd_scene load_steps=11 format=3 uid="uid://dhjuuu1fwhpi5"]

[ext_resource type="PackedScene" path="res://src/tower/tiles/YellowTile.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://wuy3v03n8t7x" path="res://src/tower/tiles/RedTile.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://doufo75jmm0ga" path="res://src/tower/tiles/DarkTile.tscn" id="6"]
[ext_resource type="PackedScene" path="res://src/tower/rooms/TowerStartRoom.tscn" id="7"]
[ext_resource type="Script" path="res://src/tower/maps/TowerClimb.gd" id="8"]
[ext_resource type="Script" path="res://addons/reptile/ReptileGroup.gd" id="9"]
[ext_resource type="PackedScene" path="res://src/gunner/targets/BreakTheTargets.tscn" id="11"]
[ext_resource type="Script" path="res://src/tower/tiles/DarkTile.gd" id="12"]
[ext_resource type="TileSet" uid="uid://5avd3m2aroxa" path="res://addons/reptile/tilesets/coldfire/ColdFireYellow.tres" id="14"]
[ext_resource type="TileSet" uid="uid://bat0oor02xfha" path="res://addons/reptile/tilesets/coldfire/ColdFireDark.tres" id="16"]

[node name="TowerClimb" type="Node2D"]
script = ExtResource("8")
img_size = 60

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 960.0
offset_bottom = 960.0
color = Color(0.964706, 0.776471, 0.658824, 1)

[node name="BreakTheTargets" parent="." instance=ExtResource("11")]

[node name="TowerStartRoom" parent="." instance=ExtResource("7")]
n_seed = 34895
octaves = 3
period = 36.3331
persistence = 0.328001
lacunarity = 2.84383
img_size = 60
cell_size = 16

[node name="Node" type="Node" parent="TowerStartRoom"]
script = ExtResource("9")
upper_bound = 0.4
color = Color(0.27451, 0.258824, 0.368627, 1)
tilemap_scene = ExtResource("5")

[node name="Node2" type="Node" parent="TowerStartRoom"]
script = ExtResource("9")
lower_bound = 0.4
upper_bound = 0.7
color = Color(0.964706, 0.776471, 0.658824, 1)
tilemap_scene = ExtResource("4")

[node name="Node3" type="Node" parent="TowerStartRoom"]
script = ExtResource("9")
lower_bound = 0.7
color = Color(0.356863, 0.462745, 0.552941, 1)
tilemap_scene = ExtResource("6")

[node name="RedTile" type="TileMap" parent="TowerStartRoom" groups=["redtile"] instance=ExtResource("5")]
format = 2

[node name="YellowTile" type="TileMap" parent="TowerStartRoom" groups=["yellowtile"] instance=ExtResource("4")]
scale = Vector2(2, 2)
tile_set = ExtResource("14")
format = 2

[node name="DarkTile" type="TileMap" parent="TowerStartRoom" groups=["darktile"] instance=ExtResource("6")]
scale = Vector2(2, 2)
tile_set = ExtResource("16")
format = 2
script = ExtResource("12")
